--- a/www/css/index.css
+++ b/www/css/index.css
@@ -34,6 +34,17 @@
 .situation{
     margin-top: 30px;
 }
+.card-title{
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+.moreinfo{
+    box-shadow: 8px 8px 0px #aaa;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+    ;
+}
 
 @media (max-width: 600px){
     #logo{
